--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "esp32-proxy",
+  "name": "esp32-mongo-api",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.5.0",
     "express": "^4.18.0",
-    "body-parser": "^1.20.0"
+    "body-parser": "^1.20.0",
+    "mongodb": "^5.1.0"
   }
 }
