--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "express": "^4.18.0",
     "body-parser": "^1.20.0",
-    "mongodb": "^5.1.0"
+    "mongodb": "^6.7.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
